--- a/matlabCESM2/README
+++ b/matlabCESM2/README
@@ -1,2 +1,28 @@
-This document notes the use of each file in this folder. 
+This document notes the use of files in this folder. 
 All are matlab codes, for using CESM2 (Community Earth System Model, version 2) output data, to create timeseries similar to the Gnanadesikan 4-box model for the Atlantic.
+Reference paper for the 4-box model: https://doi.org/10.1175/JCLI-D-18-0388.1
+Reference paper for CESM2: https://doi.org/10.1029/2019MS001916
+
+Data files in netcdf format are expected; these may be accessed for CESM2 through 
+either https://esgf-node.llnl.gov/search/cmip6/ (CMIP) or https://www.earthsystemgrid.org/dataset/ucar.cgd.cesm2le.ocn.proc.monthly_ave.html (LE)
+These two sources have different variable naming conventions.
+
+The top-level code to use is cesm2to4boxNewFw. 
+Edit the top section for the data filenames you have and the filenames you want data saved to. 
+Input: files for salinty, temperature, northward velocity, overturning circulation, and one LE file to access grid variables not included in CMIP files.
+Output: netcdf files of zonal-mean temperature, salinity, potential density, northward velocity, and overturning circulation for the Atlantic (A) and the Pacific (P),
+where the Pacific includes the full Southern Ocean in its southernmost extent. A .mat file containing all variables in both of those. 
+And finally, a netcdf file containing the box-model timeseries (monthly values): temperature, salinity, and sigma (potential density) for the 4 boxes, 
+pycnocline depth (D), Ekman (Mek) and deepwater formation (Ms) mass fluxes in the Southern Ocean, AMOC (Atlantic Meridional Overturning Circulation) as a mass flux (Mn),
+and the freshwater fluxes for the northern and southern boxes (Fws, Fwn). The additional parameters needed to run the 4-box model are notes as a string global parameter; 
+these are mixing parameters and a time constant for the northern box.
+
+This code uses zonalVTSrho0 (for CMIP data) or zonalVTSrho0LE (for LE data) to perform the zonal averaging and density computations. 
+If you have a low-RAM environment, choose zonalVTSrho0lowmemory (for CMIP data) or zonalVTSrho0LElowmemory (for LE data) instead.
+It uses freshwaterfluxN and freshwaterfluxS to compute the freshwater fluxes.
+It uses zonal2box to compute the temperature, salinity, and sigma (potential density) for the 4 boxes, pycnocline depth,
+Ekman and deepwater formation mass fluxes in the Southern Ocean, AMOC (Atlantic Meridional Overturning Circulation) as a mass flux.
+
+Deprecated codes:
+zonalV, zonalTSrho0, now combined into the zonalVTSrho0 series
+cesm2to4box, now replaced by cesm2to4boxNewFw, which calculates freshwater fluxes differently
