Commenting the cmip notebook.

--- a/box_model/python/notebooks/cmip_data_comp.ipynb
+++ b/box_model/python/notebooks/cmip_data_comp.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example AMOC data Analysis Using CMIP data and Box Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
@@ -43,9 +50,17 @@
    },
    "outputs": [],
    "source": [
-    "path_to_data = os.path.join(\"/Users\", \"ashcrcc1\", \"Library\", \"CloudStorage\", \"Box-Box\", \"JHU and APL Team\",\n",
+    "# Set up the path to stored dataset (example based on previous usage provided)\n",
+    "path_to_data = os.path.join(\"/Users\", \"user_drive\", \"Library\", \"CloudStorage\", \"Box-Box\", \"JHU and APL Team\",\n",
     "                            \"Milestone 3 - due April 13\", \"data\")\n",
     "cems2_data_nc = \"boxBHISTcmip6LE2-1001-001-188001-188912.nc\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load CMIP data using *netCDF4* Python module"
    ]
   },
   {
@@ -90,6 +105,7 @@
     }
    ],
    "source": [
+    "# Print dataset information\n",
     "root_group"
    ]
   },
@@ -119,6 +135,7 @@
     }
    ],
    "source": [
+    "# Print details on a specific variable ('box' in this case)\n",
     "root_group['box']"
    ]
   },
@@ -143,6 +160,7 @@
     }
    ],
    "source": [
+    "# Show the size of the variable just like with a Numpy array\n",
     "root_group['salinity'][:].shape"
    ]
   },
@@ -175,8 +193,16 @@
     }
    ],
    "source": [
+    "# Available variables in the dataset\n",
     "for v in root_group.variables:\n",
     "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Analysis"
    ]
   },
   {
@@ -189,7 +215,7 @@
    },
    "outputs": [],
    "source": [
-    "# step-wise variables\n",
+    "# step-wise variables from CMIP dataset\n",
     "D_low0 = root_group['Dlow'][0].data\n",
     "S_north0, S_south0, S_low0, S_deep0 = root_group['salinity'][0]\n",
     "T_north0, T_south0, T_low0, T_deep0 = root_group['temperature'][0]\n",
@@ -198,8 +224,10 @@
     "Fwn = root_group['Fwn'][0].data[0] - root_group['Fwn'][0].data[0]\n",
     "Fws = root_group['Fws'][0].data\n",
     "\n",
-    "# AMOC = M_n\n",
+    "# The AMOC state is represented by the M_n (Northern Hemisphere overturning) variable\n",
+    "#     in the Box model\n",
     "\n",
+    "# Set up inputs to the Box model\n",
     "box_dims = BoxModelBoxDimensions(D_high=200)\n",
     "init_conditions = BoxModelInitConditions(D_low0=D_low0,\n",
     "                                         S_north0=S_north0, S_south0=S_south0, S_low0=S_low0, S_deep0=S_deep0,\n",
@@ -220,13 +248,22 @@
    },
    "outputs": [],
    "source": [
+    "# Print the input information (commented out here for cleanliness)\n",
     "# print('dims:', box_dims.to_dict())\n",
     "# print('init:', init_conditions.to_dict())\n",
     "# print('params:', box_params.to_dict())\n",
     "# print('ts:', box_ts.to_dict())\n",
     "\n",
+    "# Run the box model\n",
     "results = box_model(box_dims, init_conditions, box_params, box_ts)\n",
     "M_n, M_upw, M_eddy, D_low, T, S, sigma0 = results.unpack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot Box Model data"
    ]
   },
   {
@@ -325,17 +362,6 @@
     "ax2[1, 1].legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
