Pushing some changes that were previously missed, added pybamocs_tutorial.ipynb draft.

--- a/box_model/python/notebooks/cmip_data_comp.ipynb
+++ b/box_model/python/notebooks/cmip_data_comp.ipynb
@@ -20,25 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np\n",
     "import netCDF4\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from py_box_model.box_model_args import (\n",
+    "from pybamocs.box_model_args import (\n",
     "    BoxModelBoxDimensions,\n",
     "    BoxModelInitConditions,\n",
     "    BoxModelTimeStep,\n",
     "    BoxModelParameters\n",
     ")\n",
-    "from py_box_model.box_model import box_model"
-   ]
+    "from pybamocs.box_model import box_model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
