--- a/box_model/python/notebooks/pybamocs_tutorial.ipynb
+++ b/box_model/python/notebooks/pybamocs_tutorial.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "PyBAMOCS uses a simplified box model to simulate the Atlantic meridional overturning circulation (AMOC) simulation, used by [Gnanadesikan et al.](https://journals.ametsoc.org/view/journals/clim/31/22/jcli-d-18-0388.1.xml) to examine the stability of the AMOC. For information about installing PyBAMOCS and the PyBAMOCS API, please see the included [README](../README.md).\n",
     "\n",
-    "This tutorial is meant to be a tool for getting started using the PyBAMOCS package and the included `box_model` functionality, and is not meant to be a comprehensive overview of all functions or capabilities of the included code. For a more thorough understanding, please consider viewing the code itself, and the examples in the [scrips](../scripts) folder.\n",
+    "This tutorial is meant to be a tool for getting started using the PyBAMOCS package and the included `box_model` functionality, and is not meant to be a comprehensive overview of all functions or capabilities of the included code. For a more thorough understanding, please consider viewing the code itself, and the examples in the [scripts](../scripts) folder.\n",
     "\n",
     "This tutorial assumes that you have downloaded the PyBAMOCs code from the PACMANs repository on GitHub and installed PyBAMOCS and [Jupyter Notebook](https://jupyter.org) in your Python environment."
    ],
