--- a/box_model/python/notebooks/pybamocs_tutorial.ipynb
+++ b/box_model/python/notebooks/pybamocs_tutorial.ipynb
@@ -57,7 +57,7 @@
     "    BoxModelTimeStep,\n",
     "    BoxModelParameters\n",
     ")\n",
-    "from pybamocs.box_model_args import dict_from_box_args, box_args_from_dict"
+    "from pybamocs.box_model_args import dict_from_box_args, box_args_from_dict\n"
    ]
   },
   {
@@ -657,7 +657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
